<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="483dp"
        android:layout_height="202dp"
        android:layout_centerInParent="true"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="64dp"></com.github.mikephil.charting.charts.LineChart>

    <TextView
        android:id="@+id/tv_x_axis_reportdate"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="26dp"
        android:text="@string/x_axis_label_wall_report"
        tools:layout_editor_absoluteX="259dp"
        tools:layout_editor_absoluteY="266dp" />

    <Button
        android:id="@+id/btn_saveChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/tv_saveChart"
        tools:layout_editor_absoluteX="479dp"
        tools:layout_editor_absoluteY="266dp" />

    <TextView
        android:id="@+id/tv_wallLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:rotation="270"
        android:text="@string/y_axis_label_wall_report"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="146dp" />

    <Button
        android:id="@+id/btn_byDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:text="@string/btn_byDate"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="6dp" />

    <Button
        android:id="@+id/btn_byMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/btn_byWeek"
        android:text="@string/btn_byMonth"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="6dp" />

    <Button
        android:id="@+id/btn_byWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="117dp"
        android:text="@string/btn_byWeek" />

</RelativeLayout>
